--- a/EasyProxy/EasyProxy.csproj
+++ b/EasyProxy/EasyProxy.csproj
@@ -8,4 +8,8 @@
     <PackageTags>Proxy</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
+  </ItemGroup>
+
 </Project>
